Fixing up modal to conform to aria-hidden="false" on covered (page) content when modal is open. Also added aria-describedby and accompanying text. Revised the page shell a bit to get modal working and to prepare for off-canvas. Added an editorconfig file to avoid spacing chaos. Fixed the oval into more of a circle for the modal close button. [Amends #6]

--- a/_scss/base/_shell.scss
+++ b/_scss/base/_shell.scss
@@ -3,7 +3,8 @@
 @import 'lib/bourbon/bourbon';
 @import 'lib/neat/neat';
 
-.usajobs-site-body {
+.usajobs-shell {
+  position: relative;
   @include outer-container();
   max-width: $site-max-width;
   background: $color-white;
@@ -11,6 +12,16 @@
 
 .usajobs-content-gutter {
   padding: 0 $size-M;
+}
+
+.usajobs-canvas {
+  position: relative;
+  display: block;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
 }
 
 .usajobs-content-well {
