--- a/_scss/base/_utilities.scss
+++ b/_scss/base/_utilities.scss
@@ -10,3 +10,12 @@
   overflow: hidden !important;
   clip: rect(0 0 0 0) !important;
 }
+
+@mixin makeCircle($size, $color: $color-white) {
+  width: $size;
+  height: $size;
+  line-height: $size;
+  border-radius: $size / 2;
+  color: $color;
+}
+
