--- a/css/usajobs-design-system-base.css
+++ b/css/usajobs-design-system-base.css
@@ -5003,7 +5003,8 @@ html {
   box-sizing: inherit;
 }
 
-.usajobs-site-body {
+.usajobs-shell {
+  position: relative;
   max-width: 68em;
   margin-left: auto;
   margin-right: auto;
@@ -5011,7 +5012,7 @@ html {
   background: #ffffff;
 }
 
-.usajobs-site-body::after {
+.usajobs-shell::after {
   clear: both;
   content: "";
   display: table;
@@ -5019,6 +5020,16 @@ html {
 
 .usajobs-content-gutter {
   padding: 0 3rem;
+}
+
+.usajobs-canvas {
+  position: relative;
+  display: block;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
 }
 
 @media screen and (min-width: 62em) {
